# goout/common/api.pb.go
@@ -20,6 +20,35 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
+// 接口状态码
+type StatusCode int32
+
+const (
+	StatusCode_SUCCESS          StatusCode = 0
+	StatusCode_INVALID_ARGUMENT StatusCode = 400
+	StatusCode_ACCESS_DENIED    StatusCode = 403
+)
+
+var StatusCode_name = map[int32]string{
+	0:   "SUCCESS",
+	400: "INVALID_ARGUMENT",
+	403: "ACCESS_DENIED",
+}
+
+var StatusCode_value = map[string]int32{
+	"SUCCESS":          0,
+	"INVALID_ARGUMENT": 400,
+	"ACCESS_DENIED":    403,
+}
+
+func (x StatusCode) String() string {
+	return proto.EnumName(StatusCode_name, int32(x))
+}
+
+func (StatusCode) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_71edda3932b293bf, []int{0}
+}
+
 // 分页
 type Paging struct {
 	TotalPage            int32    `protobuf:"varint,1,opt,name=total_page,json=totalPage,proto3" json:"total_page,omitempty"`
@@ -78,11 +107,11 @@ func (m *Paging) GetPerPage() int32 {
 
 // 接口返回状态码
 type ResponseStatus struct {
-	Code                 int32    `protobuf:"varint,1,opt,name=code,proto3" json:"code,omitempty"`
-	Message              string   `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	Code                 StatusCode `protobuf:"varint,1,opt,name=code,proto3,enum=common.StatusCode" json:"code,omitempty"`
+	Message              string     `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}   `json:"-"`
+	XXX_unrecognized     []byte     `json:"-"`
+	XXX_sizecache        int32      `json:"-"`
 }
 
 func (m *ResponseStatus) Reset()         { *m = ResponseStatus{} }
@@ -110,11 +139,11 @@ func (m *ResponseStatus) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_ResponseStatus proto.InternalMessageInfo
 
-func (m *ResponseStatus) GetCode() int32 {
+func (m *ResponseStatus) GetCode() StatusCode {
 	if m != nil {
 		return m.Code
 	}
-	return 0
+	return StatusCode_SUCCESS
 }
 
 func (m *ResponseStatus) GetMessage() string {
@@ -125,6 +154,7 @@ func (m *ResponseStatus) GetMessage() string {
 }
 
 func init() {
+	proto.RegisterEnum("common.StatusCode", StatusCode_name, StatusCode_value)
 	proto.RegisterType((*Paging)(nil), "common.Paging")
 	proto.RegisterType((*ResponseStatus)(nil), "common.ResponseStatus")
 }
@@ -132,17 +162,22 @@ func init() {
 func init() { proto.RegisterFile("common/api.proto", fileDescriptor_71edda3932b293bf) }
 
 var fileDescriptor_71edda3932b293bf = []byte{
-	// 188 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x34, 0x8f, 0x31, 0xcb, 0xc2, 0x30,
-	0x10, 0x86, 0xe9, 0xf7, 0x69, 0x6b, 0x6f, 0x10, 0xc9, 0x54, 0x07, 0x41, 0x3a, 0x48, 0xa7, 0x66,
-	0x70, 0x77, 0xf0, 0x17, 0x94, 0x0a, 0x0e, 0x2e, 0x12, 0xdb, 0x33, 0x14, 0x6c, 0x2e, 0x34, 0x57,
-	0xf0, 0xe7, 0x4b, 0xaf, 0x74, 0x7b, 0xf3, 0xbc, 0xb9, 0x87, 0x3b, 0xd8, 0x35, 0xd4, 0xf7, 0xe4,
-	0xb4, 0xf1, 0x5d, 0xe9, 0x07, 0x62, 0x52, 0xf1, 0x4c, 0xf2, 0x3b, 0xc4, 0x95, 0xb1, 0x9d, 0xb3,
-	0xea, 0x00, 0xc0, 0xc4, 0xe6, 0xf3, 0xf4, 0xc6, 0x62, 0x16, 0x1d, 0xa3, 0x62, 0x5d, 0xa7, 0x42,
-	0x2a, 0x63, 0x51, 0x29, 0x58, 0x49, 0xf1, 0x27, 0x85, 0x64, 0xb5, 0x87, 0x8d, 0xc7, 0x61, 0x1e,
-	0xf8, 0x17, 0x9e, 0x78, 0x1c, 0xa6, 0xef, 0xf9, 0x05, 0xb6, 0x35, 0x06, 0x4f, 0x2e, 0xe0, 0x8d,
-	0x0d, 0x8f, 0x61, 0x12, 0x34, 0xd4, 0x2e, 0x66, 0xc9, 0x2a, 0x83, 0xa4, 0xc7, 0x10, 0x16, 0x6f,
-	0x5a, 0x2f, 0xcf, 0x6b, 0xf1, 0x38, 0xd9, 0x8e, 0xcb, 0x37, 0xd9, 0xa6, 0x75, 0x25, 0x93, 0xd7,
-	0xe6, 0x8b, 0x5a, 0x76, 0x0f, 0xda, 0x12, 0x8d, 0xac, 0xe7, 0x0b, 0x5e, 0xb1, 0xc0, 0xf3, 0x2f,
-	0x00, 0x00, 0xff, 0xff, 0xc8, 0x81, 0x73, 0x61, 0xe4, 0x00, 0x00, 0x00,
+	// 259 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x44, 0x90, 0xd1, 0x4a, 0xc3, 0x30,
+	0x14, 0x86, 0x9d, 0x9b, 0xad, 0x3b, 0xe2, 0x28, 0x07, 0x84, 0x79, 0x21, 0xc8, 0x2e, 0xc6, 0xf0,
+	0xa2, 0x01, 0x7d, 0x82, 0xda, 0x16, 0x29, 0x68, 0x19, 0xa9, 0xdb, 0x85, 0x37, 0x25, 0xb6, 0x31,
+	0x14, 0x6c, 0x4f, 0x68, 0x32, 0xf0, 0x31, 0x04, 0x5f, 0x58, 0x4c, 0x18, 0xde, 0x25, 0xdf, 0xf7,
+	0x27, 0xe7, 0xe7, 0x40, 0xd4, 0x50, 0xdf, 0xd3, 0xc0, 0x84, 0xee, 0x62, 0x3d, 0x92, 0x25, 0x0c,
+	0x3c, 0x59, 0xed, 0x21, 0xd8, 0x0a, 0xd5, 0x0d, 0x0a, 0x6f, 0x00, 0x2c, 0x59, 0xf1, 0x59, 0x6b,
+	0xa1, 0xe4, 0x72, 0x72, 0x3b, 0xd9, 0x9c, 0xf1, 0xb9, 0x23, 0x5b, 0xa1, 0x24, 0x22, 0xcc, 0x9c,
+	0x38, 0x75, 0xc2, 0x9d, 0xf1, 0x1a, 0xce, 0xb5, 0x1c, 0xfd, 0x83, 0xa9, 0xe3, 0xa1, 0x96, 0xe3,
+	0x5f, 0x7c, 0xc5, 0x61, 0xc1, 0xa5, 0xd1, 0x34, 0x18, 0x59, 0x59, 0x61, 0x0f, 0x06, 0xd7, 0x30,
+	0x6b, 0xa8, 0xf5, 0x3f, 0x2f, 0xee, 0x31, 0xf6, 0x05, 0x62, 0x6f, 0x53, 0x6a, 0x25, 0x77, 0x1e,
+	0x97, 0x10, 0xf6, 0xd2, 0x98, 0xe3, 0xac, 0x39, 0x3f, 0x5e, 0xef, 0x32, 0x80, 0xff, 0x34, 0x5e,
+	0x40, 0x58, 0xed, 0xd2, 0x34, 0xaf, 0xaa, 0xe8, 0x04, 0xaf, 0x20, 0x2a, 0xca, 0x7d, 0xf2, 0x5c,
+	0x64, 0x75, 0xc2, 0x9f, 0x76, 0x2f, 0x79, 0xf9, 0x1a, 0x7d, 0x4f, 0x11, 0xe1, 0x32, 0x71, 0x91,
+	0x3a, 0xcb, 0xcb, 0x22, 0xcf, 0xa2, 0x9f, 0xe9, 0xe3, 0xe6, 0x6d, 0xad, 0x3a, 0x1b, 0x7f, 0x90,
+	0x6a, 0xda, 0x21, 0xb6, 0xa4, 0x99, 0xf8, 0x92, 0xcc, 0x6d, 0xc5, 0x30, 0x45, 0x74, 0xb0, 0xcc,
+	0x57, 0x7b, 0x0f, 0x1c, 0x7c, 0xf8, 0x0d, 0x00, 0x00, 0xff, 0xff, 0x0b, 0x6f, 0xc9, 0xbf, 0x3e,
+	0x01, 0x00, 0x00,
 }
